DTOs for event and updated api definition to use event as well
